--- a/html/index.html
+++ b/html/index.html
@@ -14,10 +14,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet">
+  <!-- style css  -->
+  <link rel="stylesheet" href="./../assets/css/main.css">
 </head>
 
 <body>
-  <header class="bg-black py-2 px-3">
+  <header class="header bg-black py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
       <div class="">
@@ -27,7 +29,7 @@
       </div>
     </div>
   </header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary px-2">
+  <nav class="navbar navbar-expand-lg bg-tertiary px-2">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
