--- a/html/register.html
+++ b/html/register.html
@@ -14,10 +14,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet">
+  <!-- style css  -->
+  <link rel="stylesheet" href="./../assets/css/main.css">
 </head>
 
 <body>
-  <header class="bg-black py-2 px-3">
+  <header class="header bg-black py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
       <div class="">
@@ -27,7 +29,7 @@
       </div>
     </div>
   </header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary px-2">
+  <nav class="navbar navbar-expand-lg bg-tertiary px-2">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +56,36 @@
       </div>
     </div>
   </nav>
-  
+  <section class="form_register bg-body">
+    <div class="container">
+      <form action="">
+        <div class="card-header text-center py-5">
+          <h3 class="card-title">Register</h3>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <div class="w-50">
+            <input type="text" placeholder="Email" class="w-75">
+            <input type="password" placeholder="Password" class="w-75">
+            <input type="password" placeholder="Password confirm" class="w-75">
+          </div>
+          <div class="w-50">
+            <input type="text" placeholder="Name" class="w-75">
+            <input type="text" placeholder="Phone number" class="w-75">
+            <div class="d-inline">
+              <h5>Gender</h5>
+              <input type="checkbox" name="Male" id="">
+              <label for="Male">Male</label>
+              <input type="checkbox" name="Female" id="">
+              <label for="female">Female</label>
+            </div>
+          </div>
+        </div>
+        <div class="my-3 text-center">
+          <button type="submit" class="btn btn-success px-5 mt-3" >Submit</button>
+        </div>
+      </form>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <div class="top_footer d-flex">
