--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
   <!-- style css  -->
   <link rel="stylesheet" href="./../assets/css/main.css">
 </head>
@@ -56,24 +56,15 @@
       </div>
     </div>
   </nav>
-  <section id="carouselExampleCaptions" class="carousel slide bg-white pb-5">
-    <!-- <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div> -->
-    <div class="carousel-inner pb-5"
-      style="background-image: url(./../assets/img/image\ 6.png); background-repeat: no-repeat; background-size: cover;">
+  <section id="carouselExampleCaptions" class="carousel slide pb-5">
+    <div class="carousel-inner pb-5">
       <div class="container">
         <div class="carousel-item active">
           <img src="./../assets/img/image 4.png" class="d-block w-75 mx-auto mx-sm-0" alt="...">
           <div class="carousel-caption d-none d-sm-block w-25">
             <h5>Product name</h5>
             <p>Product description ....</p>
-            <button class="btn btn-danger px-4">Buy now</button>
+            <button class="btn btn-danger">Buy now</button>
           </div>
         </div>
         <div class="carousel-item">
@@ -81,7 +72,7 @@
           <div class="carousel-caption d-none d-sm-block w-25">
             <h5>Product name</h5>
             <p>Product description ....</p>
-            <button class="btn btn-danger px-4">Buy now</button>
+            <button class="btn btn-danger">Buy now</button>
           </div>
         </div>
         <div class="carousel-item">
@@ -89,7 +80,7 @@
           <div class="carousel-caption d-none d-sm-block w-25">
             <h5>Product name</h5>
             <p>Product description ....</p>
-            <button class="btn btn-danger px-4">Buy now</button>
+            <button class="btn btn-danger">Buy now</button>
           </div>
         </div>
       </div>
@@ -115,8 +106,8 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <div class="top_footer d-flex">
-        <div class="footer_content">
+      <div class="top_footer">
+        <div class="footer-content left">
           <h5>GET HELP</h5>
           <ul>
             <li><a href="">Contact us</a></li>
@@ -125,7 +116,7 @@
             <li><a href="">Nike+</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content mid">
           <h5>ORDERS</h5>
           <ul>
             <li><a href="">Payment options</a></li>
@@ -133,35 +124,35 @@
             <li><a href="">Returns</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content right">
           <h5>REGISTER</h5>
           <ul>
             <li><a href="">Create one account to manage everything you do with Nike, from your shopping preferences to
                 your Nike+ activity.</a></li>
-            <li><a href="">Learn more</a></li>
+            <li><a class="footer-click-add" href="">Learn more</a></li>
           </ul>
         </div>
       </div>
-      <div class="bot_footer d-flex">
-        <div class="footer_content">
+      <div class="bot_footer">
+        <div class="footer-content">
           <h5>EMAIL SIGN UP</h5>
           <ul>
             <li><a href="">Be the first to know about new products and special offers.</a></li>
-            <li><a href="">Sign up now</a></li>
+            <li><a class="footer-click-add" href="">Sign up now</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content">
           <h5>GIFT CARDS</h5>
           <ul>
             <li><a href="">Give the gift that always fits.</a></li>
-            <li><a href="">View cards</a></li>
+            <li><a class="footer-click-add" href="">View cards</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content">
           <h5>STORES NEAR YOU</h5>
           <ul>
             <li><a href="">Locate a Nike retail stories or authorized retailler.</a></li>
-            <li><a href="">Search</a></li>
+            <li><a class="footer-click-add" href="">Search</a></li>
           </ul>
         </div>
       </div>
