--- a/html/register.html
+++ b/html/register.html
@@ -88,8 +88,8 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <div class="top_footer d-flex">
-        <div class="footer_content">
+      <div class="top_footer">
+        <div class="footer-content left">
           <h5>GET HELP</h5>
           <ul>
             <li><a href="">Contact us</a></li>
@@ -98,7 +98,7 @@
             <li><a href="">Nike+</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content mid">
           <h5>ORDERS</h5>
           <ul>
             <li><a href="">Payment options</a></li>
@@ -106,35 +106,35 @@
             <li><a href="">Returns</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content right">
           <h5>REGISTER</h5>
           <ul>
             <li><a href="">Create one account to manage everything you do with Nike, from your shopping preferences to
                 your Nike+ activity.</a></li>
-            <li><a href="">Learn more</a></li>
+            <li><a class="footer-click-add" href="">Learn more</a></li>
           </ul>
         </div>
       </div>
-      <div class="bot_footer d-flex">
-        <div class="footer_content">
+      <div class="bot_footer">
+        <div class="footer-content">
           <h5>EMAIL SIGN UP</h5>
           <ul>
             <li><a href="">Be the first to know about new products and special offers.</a></li>
-            <li><a href="">Sign up now</a></li>
+            <li><a class="footer-click-add" href="">Sign up now</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content">
           <h5>GIFT CARDS</h5>
           <ul>
             <li><a href="">Give the gift that always fits.</a></li>
-            <li><a href="">View cards</a></li>
+            <li><a class="footer-click-add" href="">View cards</a></li>
           </ul>
         </div>
-        <div class="footer_content">
+        <div class="footer-content">
           <h5>STORES NEAR YOU</h5>
           <ul>
             <li><a href="">Locate a Nike retail stories or authorized retailler.</a></li>
-            <li><a href="">Search</a></li>
+            <li><a class="footer-click-add" href="">Search</a></li>
           </ul>
         </div>
       </div>
