--- a/html/detail.html
+++ b/html/detail.html
@@ -38,19 +38,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link me-2" href="./index.html">Home</a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-2" href="#">Men</a>
+            <a class="nav-link" href="#">Men</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-2" href="#">Women</a>
+            <a class="nav-link" href="#">Women</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-2" href="#">Kid</a>
+            <a class="nav-link" href="#">Kid</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-2" href="#">Sport</a>
+            <a class="nav-link" href="#">Sport</a>
           </li>
         </ul>
       </div>
@@ -70,8 +70,8 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="container">
-      <div class="top_footer">
+    <div class="top_footer">
+      <div class="container">
         <div class="footer-content left">
           <h5>GET HELP</h5>
           <ul>
@@ -98,7 +98,9 @@
           </ul>
         </div>
       </div>
-      <div class="bot_footer">
+    </div>
+    <div class="bot_footer">
+      <div class="container">
         <div class="footer-content">
           <h5>EMAIL SIGN UP</h5>
           <ul>
