--- a/html/index.html
+++ b/html/index.html
@@ -105,8 +105,8 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="container">
-      <div class="top_footer">
+    <div class="top_footer">
+      <div class="container">
         <div class="footer-content left">
           <h5>GET HELP</h5>
           <ul>
@@ -133,7 +133,9 @@
           </ul>
         </div>
       </div>
-      <div class="bot_footer">
+    </div>
+    <div class="bot_footer">
+      <div class="container">
         <div class="footer-content">
           <h5>EMAIL SIGN UP</h5>
           <ul>
