--- a/html/register.html
+++ b/html/register.html
@@ -87,8 +87,8 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="container">
-      <div class="top_footer">
+    <div class="top_footer">
+      <div class="container">
         <div class="footer-content left">
           <h5>GET HELP</h5>
           <ul>
@@ -115,7 +115,9 @@
           </ul>
         </div>
       </div>
-      <div class="bot_footer">
+    </div>
+    <div class="bot_footer">
+      <div class="container">
         <div class="footer-content">
           <h5>EMAIL SIGN UP</h5>
           <ul>
