--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
       <div class="">
-        <img class="me-3" src="../assets/img/image 8.png" alt="">
+        <a href="#"><img class="me-3" src="../assets/img/image 8.png" alt=""></a>
         <a class="me-3" href="#">Login</a>
         <a class="me-3" href="./register.html">Register</a>
       </div>
