--- a/html/register.html
+++ b/html/register.html
@@ -23,9 +23,9 @@
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
       <div class="">
-        <img class="me-3" src="../assets/img/image 8.png" alt="">
+        <a href="#"><img class="me-3" src="../assets/img/image 8.png" alt=""></a>
         <a class="me-3" href="#">Login</a>
-        <a class="me-3" href="#">Register</a>
+        <a class="me-3" href="./register.html">Register</a>
       </div>
     </div>
   </header>
@@ -56,32 +56,38 @@
       </div>
     </div>
   </nav>
-  <section class="form_register bg-body">
+  <section class="form_register bg-body mx-auto">
     <div class="container">
-      <form action="">
-        <div class="card-header text-center py-5">
+      <form class="card my-3">
+        <div class="card-header text-center py-3">
           <h3 class="card-title">Register</h3>
         </div>
-        <div class="card-body d-flex justify-content-center">
-          <div class="w-50">
-            <input type="text" placeholder="Email" class="w-75">
-            <input type="password" placeholder="Password" class="w-75">
-            <input type="password" placeholder="Password confirm" class="w-75">
+        <div class="card-body d-flex">
+          <div class="form-input w-50 mx-3">
+            <input type="text" placeholder="Email" class="form-control">
+            <input type="password" placeholder="Password" class="form-control">
+            <input type="password" placeholder="Password confirm" class="form-control">
           </div>
-          <div class="w-50">
-            <input type="text" placeholder="Name" class="w-75">
-            <input type="text" placeholder="Phone number" class="w-75">
-            <div class="d-inline">
+          <div class="form-input w-50 mx-3">
+            <input type="text" placeholder="Name" class="form-control">
+            <input type="text" placeholder="Phone number" class="form-control">
+            <div class="d-inline d-flex">
               <h5>Gender</h5>
-              <input type="checkbox" name="Male" id="">
-              <label for="Male">Male</label>
-              <input type="checkbox" name="Female" id="">
-              <label for="female">Female</label>
+              <div class="form-radio d-flex flex-wrap mx-4">
+                <div class="radio">
+                  <input type="radio" name="gender" id="male">
+                  <label for="Male">Male</label>
+                </div>
+                <div class="radio">
+                  <input type="radio" name="gender" id="female">
+                  <label for="female">Female</label>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="my-3 text-center">
-          <button type="submit" class="btn btn-success px-5 mt-3" >Submit</button>
+        <div class="py-3 text-center btn-submit">
+          <button type="submit" class="btn btn-success mb-3">Submit</button>
         </div>
       </form>
     </div>
