--- a/html/detail.html
+++ b/html/detail.html
@@ -38,34 +38,34 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link me-2" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Men</a>
+            <a class="nav-link me-2" href="#">Men</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Women</a>
+            <a class="nav-link me-2" href="#">Women</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kid</a>
+            <a class="nav-link me-2" href="#">Kid</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sport</a>
+            <a class="nav-link me-2" href="#">Sport</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
- <section class="product_detail">
-  <div class="container"></div>
- </section>
+  <section class="product_detail">
+    <div class="container"></div>
+  </section>
   <section class="products">
     <div class="container">
       <div class="title text-center">
-        <h3>- Realate Product -</h3>
+        <h3>- Products Feature -</h3>
       </div>
-      <div class="products_show my-5 py-5">
-        <div class="content"></div>
+      <div class="products_show py-3">
+        <div class="content d-flex flex-wrap mx-auto"></div>
       </div>
     </div>
   </section>
@@ -125,6 +125,10 @@
       </div>
     </div>
   </footer>
+  <!-- backtoTop  -->
+  <a class="backtoTop cd-top text-replace js-cd-top" href="#">
+    <i class="fa fa-level-up"></i>
+  </a>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -134,6 +138,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+  <!-- scroll to top  -->
+  <script src="./../utils/main.js"></script>
+  <script src="./../utils/util.js"></script>
+
+  <script src="./../controllers/index.js"></script>
 </body>
 
 </html>
