--- a/html/register.html
+++ b/html/register.html
@@ -25,7 +25,7 @@
       <div class="">
         <a href="#"><img class="me-3" src="../assets/img/image 8.png" alt=""></a>
         <a class="me-3" href="#">Login</a>
-        <a class="me-3" href="./register.html">Register</a>
+        <a class="me-3" href="#">Register</a>
       </div>
     </div>
   </header>
@@ -148,6 +148,10 @@
       </div>
     </div>
   </footer>
+<!-- backtoTop  -->
+<a class="backtoTop cd-top text-replace js-cd-top" href="#">
+  <i class="fa fa-level-up"></i>
+</a>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -157,6 +161,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
+  <!-- scroll to top  -->
+  <script src="./../utils/main.js"></script>
+  <script src="./../utils/util.js"></script>
+
+  <script src="./../controllers/index.js"></script>
 </body>
 
 </html>
