--- a/html/detail.html
+++ b/html/detail.html
@@ -10,15 +10,24 @@
   <!-- Bootstrap CSS v5.3.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- axios cdn -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.0/axios.min.js"
+    integrity="sha512-WrdC3CE9vf1nBf58JHepuWT4x24uTacky9fuzw2g/3L9JkihgwZ6Cfv+JGTtNyosOhEmttMtEZ6H3qJWfI7gIQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+  <!-- font awesome  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- style css  -->
   <link rel="stylesheet" href="./../assets/css/main.css">
 </head>
 
-<body>
+<body onload="onloadData()">
   <header class="header bg-black py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
@@ -56,13 +65,36 @@
       </div>
     </div>
   </nav>
-  <section class="product_detail">
-    <div class="container"></div>
+  <section class="product_detail my-5">
+    <!-- <div class="container">
+      <div class="d-flex">
+        <div class="detail_left w-50 mx-4">
+          <div class="card">
+            <img class="card-img-top w-100" src="" alt="">
+          </div>
+        </div>
+        <div class="detail_right w-50 mx-4">
+          <h3 class="detail_right_title"></h3>
+          <p class="descript"></p>
+          <h5 class="size"></h5>
+          <div class="size_content mt-2"></div>
+          <div class="my-4">
+            <span class="total-price alert alert-light text-black"></span>
+          </div>
+          <div class="quanlity d-inline d-flex my-4">
+            <button class="btn btn-outline-secondary text-black"><i class="fa-solid fa-minus"></i></button>
+            <p class="btn">1</p>
+            <button class="btn btn-outline-secondary text-black"><i class="fa-solid fa-plus"></i></button>
+          </div>
+          <button class="btn btn-success px-4 py-2">Add to cart</button>
+        </div>
+      </div>
+    </div> -->
   </section>
   <section class="products">
     <div class="container">
       <div class="title text-center">
-        <h3>- Products Feature -</h3>
+        <h3>- Realate Product -</h3>
       </div>
       <div class="products_show py-3">
         <div class="content d-flex flex-wrap mx-auto"></div>
@@ -143,6 +175,7 @@
   <script src="./../utils/util.js"></script>
 
   <script src="./../controllers/index.js"></script>
+  <script src="./../controllers/detail.js"></script>
 </body>
 
 </html>
