--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,10 @@
 <body onload="onloadData()">
   <header class="header bg-black py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
-      <img src="./../assets/img/image 3.png" alt="">
+      <div>
+        <img src="./../assets/img/image 3.png" alt="">
+        
+      </div>
       <div class="">
         <a href="#"><img class="me-3" src="../assets/img/image 8.png" alt=""></a>
         <a class="me-3" href="#">Login</a>
