--- a/html/register.html
+++ b/html/register.html
@@ -71,14 +71,14 @@
         <div class="card-header text-center py-3">
           <h3 class="card-title">Register</h3>
         </div>
-        <div class="card-body d-flex flex-wrap flex-sm-nowrap">
+        <div id="form" class="card-body d-flex flex-wrap flex-sm-nowrap">
           <div class="form-input w-100 mx-3">
             <input id="email" type="text" placeholder="Email" class="form-control" autocomplete="email">
             <span class="sp-thongbao" id="tbEmail"></span>
             <input id="password" type="password" placeholder="Password" class="form-control">
             <span class="sp-thongbao" id="tbPassword"></span>
             <input id="confirmPassword" type="password" placeholder="Password confirm" class="form-control">
-            <span class="sp-thongbao" id="tbTen"></span>
+            <span class="sp-thongbao" id="tbConfirm"></span>
           </div>
           <div class="form-input w-100 mx-3">
             <input id="name" type="text" placeholder="Name" class="form-control" autocomplete="name">
@@ -98,10 +98,11 @@
                 </div>
               </div>
             </div>
+            <span class="sp-thongbao" id="tbGender"></span>
           </div>
         </div>
         <div class="py-3 text-center btn-submit">
-          <button type="submit" class="btn btn-success mb-3" onclick="inputUser()">Submit</button>
+          <button id="btnBack" type="submit" class="btn btn-success mb-3" onclick="inputUser()">Submit</button>
         </div>
       </div>
     </div>
