--- a/html/register.html
+++ b/html/register.html
@@ -31,10 +31,13 @@
   <header class="header bg-black py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
-      <div class="">
-        <a href="#"><img class="me-3" src="../assets/img/image 8.png" alt=""></a>
+      <div class="d-flex">
+        <div>
+          <a href="#cart"><img class="" src="../assets/img/image 8.png" alt=""></a>
+          <span class="quatity-count me-3">0</span>
+        </div>
         <a class="me-3" href="#">Login</a>
-        <a class="me-3" href="#">Register</a>
+        <a class="me-3" href="./register.html">Register</a>
       </div>
     </div>
   </header>
@@ -182,7 +185,7 @@
   <script src="./../utils/main.js"></script>
   <script src="./../utils/util.js"></script>
 
-  <!-- <script src="./../controllers/index.js"></script> -->
+  <script src="./../utils/data.js"></script>
   <script src="./../utils/method.js"></script>
   <script src="./../controllers/register.js"></script>
 
