--- a/html/index.html
+++ b/html/index.html
@@ -30,12 +30,30 @@
 <body onload="onloadData()">
   <header class="header bg-black py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
-      <div>
-        <img src="./../assets/img/image 3.png" alt="">
-        
-      </div>
-      <div class="">
-        <a href="#"><img class="me-3" src="../assets/img/image 8.png" alt=""></a>
+      <img src="./../assets/img/image 3.png" alt="">
+      <div class="d-flex">
+        <div data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <a href="#cart"><img class="modal-body" src="../assets/img/image 8.png" alt="">
+          </a>
+          <span class="quatity-count me-3">0</span>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">My Cart</h1>
+                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+              </div>
+              <div class="modal-body">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <a class="me-3" href="#">Login</a>
         <a class="me-3" href="./register.html">Register</a>
       </div>
@@ -190,6 +208,7 @@
   <script src="./../utils/main.js"></script>
   <script src="./../utils/util.js"></script>
 
+  <script src="./../utils/data.js"></script>
   <script src="./../controllers/index.js"></script>
 </body>
 
