--- a/html/detail.html
+++ b/html/detail.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <header class="header bg-black py-2 px-3">
+  <header class="header py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
       <div class="d-flex">
@@ -51,7 +51,8 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear all</button>
+                <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear
+                  all</button>
                 <a href="#ViewAllCart" type="button" class="btn btn-success">View all</a>
               </div>
             </div>
@@ -62,7 +63,7 @@
       </div>
     </div>
   </header>
-  <nav class="navbar navbar-expand-lg bg-tertiary px-2">
+  <nav class=" navbar navbar-expand-lg bg-tertiary px-2 text-black">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -183,8 +184,7 @@
   </footer>
   <!-- backtoTop  -->
   <a class="backtoTop cd-top text-replace js-cd-top" href="#">
-    <i class="fa fa-level-up"></i>
-  </a>
+    <i class="fa-solid fa-hand-point-up"></i> </a>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -194,6 +194,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
+    <!-- dark mode  -->
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script src="./../utils/switchTheme.js"></script>
+
   <!-- scroll to top  -->
   <script src="./../utils/main.js"></script>
   <script src="./../utils/util.js"></script>
