--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,8 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear all</button>
+                <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear
+                  all</button>
                 <a href="#ViewAllCart" type="button" class="btn btn-success">View all</a>
               </div>
             </div>
@@ -89,7 +90,7 @@
       </div>
     </div>
   </nav>
-  <section id="carouselExampleCaptions" class="carousel slide pb-5">
+  <section id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-inner pb-5">
       <div class="container">
         <div class="carousel-item active">
@@ -113,7 +114,7 @@
           <div class="carousel-caption d-none d-sm-block w-25">
             <h5>Product name</h5>
             <p>Product description ....</p>
-            <button class="btn btn-danger">Buy now</button>
+            <button class="btn btn-danger" onclick="myFunction()">Buy now</button>
           </div>
         </div>
       </div>
@@ -196,8 +197,7 @@
 
   <!-- backtoTop  -->
   <a class="backtoTop cd-top text-replace js-cd-top" href="#">
-    <i class="fa fa-level-up"></i>
-  </a>
+    <i class="fa-solid fa-hand-point-up"></i> </a>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -206,6 +206,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
+  <!-- dark mode  -->
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script src="./../utils/switchTheme.js"></script>
+
 
   <!-- scroll to top  -->
   <script src="./../utils/main.js"></script>
