--- a/html/register.html
+++ b/html/register.html
@@ -189,8 +189,7 @@
   </footer>
   <!-- backtoTop  -->
   <a class="backtoTop cd-top text-replace js-cd-top" href="#">
-    <i class="fa fa-level-up"></i>
-  </a>
+    <i class="fa-solid fa-hand-point-up"></i> </a>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -200,6 +199,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
+    <!-- dark mode  -->
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script src="./../utils/switchTheme.js"></script>
+
 
 
   <!-- scroll to top  -->
